--- a/src/components/_global/css/forms/text/component.scss
+++ b/src/components/_global/css/forms/text/component.scss
@@ -14,6 +14,8 @@ textarea{
 	background-color: var(--QLD-color-light-background);
 	box-sizing: border-box;
 	appearance: none;
+	width: 100%;
+	max-width: 12.8125rem;
 
 	@include QLD-focus();
 
@@ -22,8 +24,11 @@ textarea{
 	}
 
 	&.qld__input--valid {
-		border-color: $QLD-color-success;
-		background-color: RGBA(107,190,39,0.05); //$QLD-color-success with .05 opacity
+		&:not(:focus) { 
+			border-color: $QLD-color-success;
+			background-color: $QLD-color-success__light; //$QLD-color-success with .05 opacity
+		}
+
 	}
 
 	&.qld__input--error {
@@ -40,7 +45,10 @@ textarea{
 	}
 
 	&:hover{
-		background-color: var(--QLD-color-light-alt-background);
+		&:not(:focus) { 
+			background-color: var(--QLD-color-light-background__shade);
+			border-color: var(--QLD-color-light-button__hover);
+		}
 	}
 	
 	&[aria-expanded="true"],
@@ -50,6 +58,11 @@ textarea{
 
 	&:focus{
 		background-color: var(--QLD-color-light-background);
+		border-radius: $QLD-border-radius-xs;
+		border:$QLD-border-width-default solid var(--QLD-color-light-border);
+		&::placeholder {
+			color: var(--QLD-color-light-text__muted);
+		}
 	}
 
 	.qld__body--dark &,
@@ -66,6 +79,14 @@ textarea{
 			color: var(--QLD-color-dark-text__muted);
 		}
 
+		&:focus{
+			background-color: var(--QLD-color-light-background);
+			border-color: var(--QLD-color-light-border);
+			&::placeholder {
+				color: var(--QLD-color-light-text__muted);
+			}
+		}
+
 		@include QLD-focus(dark);
 
 		&:focus,
@@ -76,8 +97,9 @@ textarea{
 
 
 		&.qld__input--valid {
+			color: var(--QLD-color-light-text);
 			border-color: $QLD-color-success;
-			background-color: RGBA(107,190,39,0.05); //$QLD-color-success with .05 opacity
+			background-color: $QLD-color-success__light; //$QLD-color-success with .05 opacity
 		}
 	
 		&.qld__input--error {
@@ -86,8 +108,11 @@ textarea{
 		}
 
 		&:hover{
-			color: var(--QLD-color-dark-text);
-			background-color: var(--QLD-color-dark-background__shade);
+			&:not(:focus) { 
+				color: var(--QLD-color-dark-text);
+				background-color: var(--QLD-color-dark-background__shade);
+				border-color: var(--QLD-color-dark-button__hover);
+			}
 		}
 
 		&[aria-expanded="true"],
@@ -107,11 +132,14 @@ textarea{
 		border-width: 0 0 2px 0;
 		border-bottom-left-radius: 0;
 		border-bottom-right-radius: 0;
+		@include QLD-space( padding, 0.875unit 1.125unit 0.75unit 1.125unit);
 
 		&:hover {
-			background-color: var(--QLD-color-light-alt-background__shade);
-			border-color: var(--QLD-color-light-button__hover);
-			cursor: pointer;
+			&:not(:focus) { 
+				background-color: var(--QLD-color-light-alt-background__shade);
+				border-color: var(--QLD-color-light-button__hover);
+				cursor: pointer;
+			}
 		}
 
 		&[aria-expanded="true"],
@@ -121,8 +149,11 @@ textarea{
 		}
 
 		&:focus {
-			background-color: var(--QLD-color-light-background__shade);
-			border-color: transparent;
+			background-color: var(--QLD-color-light-background);
+			border:$QLD-border-width-default solid var(--QLD-color-light-border);
+			border-bottom-left-radius: 4px;
+			border-bottom-right-radius: 4px;
+			@include QLD-space( padding, 0.75unit 1unit 0.75unit 1unit);
 		}
 
 		&.qld__text-input--dark.qld__input--error,
@@ -146,20 +177,19 @@ textarea{
 		&--valid {
 			background-color: $QLD-color-success__light;
 			border-color: $QLD-color-success;
-
+			color: var(--QLD-color-light-text);
+			
 			&:hover {
-				background-color: $QLD-color-success__shade;
-			}
-
-			&:focus {
-				background-color: var(--QLD-color-light-background__shade);
-				border-color: transparent;
+				&:not(:focus) { 
+					background-color: $QLD-color-success__shade;
+					border-color: $QLD-color-success;
+				}
 			}
 		}
 	}
 
-	.qld__body--dark,
-	.qld__body--dark-alt,
+	.qld__body--dark, .qld__body--dark &,
+	.qld__body--dark-alt, .qld__body--dark-alt &,
 	.qld__header__main--dark,
 	.qld__header__main--dark-alt,
 	.qld__banner--dark, 
@@ -178,21 +208,25 @@ textarea{
 			}
 
 			&:hover {
-				background-color: var(--QLD-color-dark-background__shade);
-				border-color: var(--QLD-color-dark-button);
+				&:not(:focus) { 
+					background-color: var(--QLD-color-dark-background__shade);
+					border-color: var(--QLD-color-dark-button);
+				}
 			}
 
 			&:focus {
 				background-color: var(--QLD-color-light-background);
-				border-color: transparent;
 				color: var(--QLD-color-light-text);
+				border-color: var(--QLD-color-light-border);
+				&::placeholder {
+					color: var(--QLD-color-light-text__muted);
+				}
 			}
 
 			&[aria-expanded="true"],
 			&:hover[aria-expanded="true"]{
 				color: var(--QLD-color-light-text);
 				background-color: var(--QLD-color-light-background);
-				border-color: transparent;
 			}
 
 			&.qld__text-input--dark.qld__input--error,
@@ -223,11 +257,17 @@ textarea{
 				color: var(--QLD-color-light-text__muted);
 
 				&:hover {
-					background-color: $QLD-color-success__shade;
+					&:not(:focus) { 
+						background-color: $QLD-color-success__shade;
+					}
 				}
 
 				&:focus {
 					border-color: transparent;
+				}
+
+				&::placeholder {
+					color: var(--QLD-color-light-text__muted);
 				}
 			}
 
@@ -239,13 +279,27 @@ textarea{
 			&--valid {
 				&:focus {
 					background-color: var(--QLD-color-light-background);
-					border-color: transparent;
 				}
 			}
 		}
 	}
 }
 
+.sq-form-question input,
+.sq-form-question textarea,
+.sq-form-question-email-address input,
+.qld__text-input, select, .qld__select {
+	&.qld__text-input--block {
+		display: block;
+		width: 100%;
+		max-width: 100%;
+	}
+
+	&.qld__text-input--number {
+		font-variant: tabular-nums;
+		letter-spacing: 2px;
+	}
+}
 
 // .sq-form-question input,
 // .sq-form-question textarea,
@@ -349,10 +403,7 @@ textarea{
 // 	/**
 // 	 * Block modifier
 // 	 */
-// 	&.qld__text-input--block {
-// 		display: block;
-// 		width: 100%;
-// 	}
+
 
 // 	/**
 // 	 * Number input styling.
